<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formFillingLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.vishal.danceacademy.FormFilling" >

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <ImageView
	        android:id="@+id/logoImageView"
	        android:layout_width="50dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/sjsu_logo" />

	    <TextView
	        android:id="@+id/userDetailsTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginTop="15dp"	        
	        android:textColor="@color/white"
	        android:textSize="20sp" 
	        android:text="@string/user_details" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/firstnameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstname"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/firstnameEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editFirstname" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastnameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/lastname" />

        <EditText
            android:id="@+id/lastnameEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:hint="@string/editLastname" >
            
        </EditText>

	</LinearLayout>
	
     <LinearLayout
        android:id="@+id/emailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:ems="10"            
            android:inputType="textEmailAddress"
            android:hint="@string/editEmail" />

	</LinearLayout>
	
     <LinearLayout
        android:id="@+id/phoneNumberLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
			android:hint="@string/editPhone_number" />

	</LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >

         <Button
             android:id="@+id/exitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/cancel" />

         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/save" />

     </LinearLayout>

</LinearLayout>
